#359 fix overflow of table in print-preview

--- a/styles.css
+++ b/styles.css
@@ -228,6 +228,7 @@
 /*    overflow: scroll;
     max-height:500px;
 */
+    overflow:auto;
     border-width: 1px;
     border-color: #dddddd;
     border-style: solid;
